--- a/src/css/style.css
+++ b/src/css/style.css
@@ -81,7 +81,7 @@ main {
 
 .card-pokedev .card-info p {
     font-size: 15px;
-    max-height: 150px;
+    height: 150px;
     overflow-y: scroll;
     padding: 0 10px;
 }
