--- a/src/css/style.css
+++ b/src/css/style.css
@@ -84,6 +84,7 @@ main {
     height: 150px;
     overflow-y: scroll;
     padding: 0 10px;
+    overflow-y: auto;
 }
 
 .tipo-eletrico {
@@ -128,7 +129,7 @@ main {
     margin-bottom: 10px;
     cursor: pointer;
     border-top-left-radius: 30px;
-    border-bottom-left-radius: 30px;
+    border-bottom-right-radius: 30px;
     height: 70px;
     transition: 0.15s ease-in-out;
 }
@@ -143,4 +144,21 @@ main {
 
 .listagem .pokedev.ativo {
     background-color: #fa6668;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+    background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+    background-color: #555;
 }
